frontend/test/should_fail/iterated_query_in_lhs_def_variable_initialization.grg
test foo()
{
	iterated it {
		.;
	---
		def var bar:double = 1;
	}
---
	def var score:double = [?it].extract<bar>().sum(); // on lhs only in yield expression allowed
}
